# tsp-vrp-optimization

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml
Q1/: Clark_and_Wright_Q1.py  Double Tree.py  TSPFile_reader.py  clark_and_wright_q1.py  creation_graph.py  nearest_neighbor.py
Q2/: 2-OPT.py  3-OPT.py  Clark_and_Wright_Q2.py  Q2_2.tsp  Q2_3.tsp  Tabu.py  creation_graph.py  model.ilp  nearest_neighbor_Q2.py  pyCombinatorial 11Test.ipynb
Q3/: model.ilp
Q4/: ALNS.py
