[project]
name = "devoir-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alns>=7.0.0",
    "gurobipy>=12.0.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pycombinatorial>=2.0.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "verypy>=1.0.5",
    "vrplib>=1.5.1",
]
